tests/paczka1/fuzzy1/52344489.err
Error in line 4: ljHxS8LNrE A350 93,2
Error in line 12: NbIjfk A350 9,7
Error in line 26: NbIjfk S76 99,1
